fix issue with donate and create buttons not showing correctly

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -112,6 +112,7 @@ nav {
             font-size: $navLinkFontSize;
             font-weight: 500;
             border: 1px solid $whiteBorder !important;
+            padding: 8px 20px;
             letter-spacing: 1px;
         }
         & > li > a:hover {
